# plinth

./: Cargo.toml  build.rs
crates/image_decode/: Cargo.toml
crates/image_decode/src/: lib.rs  png.rs  qoi.rs
examples/: bouncing_rects.rs  empty_window.rs  hello.rs  hello_framerate.rs  hello_image.rs  hello_rects.rs  hello_window.rs  image_view.rs  vsync.rs
res/: rect_shader.hlsl
scratch/: bouncing_rects.rs
src/: animation.rs  application.rs  arena.rs  canvas.rs  color.rs  frame.rs  geometry.rs  graphics.rs  hash.rs  input.rs  io.rs  lib.rs  limits.rs  main.rs  render.rs  resource.rs  scene.rs  static_str.rs  string.rs  time.rs  util.rs  vsync.rs  window.rs
src/backend/system/: mod.rs
src/backend/system/win32/: mod.rs  window.rs
src/core/: arena.rs  limit.rs  limits.rs  mod.rs  slotmap.rs  static_lru_cache.rs  static_slot_map.rs
src/geometry/: image.rs  mod.rs  pixel.rs  point.rs  rect.rs  scale.rs  size.rs  window.rs
src/graphics/: backend.rs  canvas.rs  color.rs  draw_list.rs  frame_statistics.rs  i16q3.rs  image.rs  limits.rs  mod.rs  primitives.rs  texture_atlas.rs
src/graphics/api/: dx12.rs  mod.rs
src/graphics/backend/: draw_list.rs  dx12.rs  mod.rs  texture_atlas.rs
src/graphics/backend/dx12/: canvas.rs  command_list.rs  context.rs  descriptor.rs  device.rs  image.rs  memory.rs  mod.rs  output.rs  queue.rs  shaders.rs  swapchain.rs  uploader.rs
src/graphics/gl/: mod.rs
src/graphics/gl/dx12/: device.rs  mod.rs  swapchain.rs  uploader.rs
src/graphics/text/: mod.rs
src/graphics/thread/: mod.rs  vsync.rs  worker.rs
src/math/: geometry.rs  mod.rs  point.rs  rect.rs  scale.rs  size.rs  translate.rs  unit.rs  vec.rs
src/platform/: gfx.rs  handle_pool.rs  mod.rs
src/platform/dx12/: canvas.rs  descriptor.rs  device.rs  dxwindow.rs  interposer.rs  mod.rs  queue.rs  shaders.rs  window.rs
src/platform/win32/: application.rs  event_loop.rs  event_thread.rs  loader.rs  mod.rs  swapchain.rs  ui_thread.rs  vsync.rs  window.rs  window_thread.rs
src/shell/: mod.rs  win32.rs
src/system/: dpi.rs  event_loop.rs  input.rs  limits.rs  mod.rs  power.rs  time.rs  window.rs
src/system/win32/: application.rs  event_loop.rs  event_thread.rs  handler_thread.rs  input.rs  mod.rs  time.rs  window.rs  window_thread.rs
src/system/win32/window/: event_thread.rs  handler_thread.rs  mod.rs
src/text/: mod.rs
src/visuals/: canvas.rs  image.rs  mod.rs  panel.rs  pixel.rs  text.rs  tree.rs
src/window/: win32.rs
