workspace = { members = ["crates/image_decode"] }
[package]
name = "plinth"
version = "0.1.0"
edition = "2021"

[features]
default = ["png", "jpeg"]
profile = ["dep:tracing-tracy"]
png = ["dep:image", "image/png"]
jpeg = ["dep:image", "image/jpeg"]

[dependencies]
arrayvec = "0.7.4"
image = { version = "0.24.8", default-features = false, optional = true }
lazy_static = "1.4.0"
memmap2 = "0.9.4"
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
slotmap = "1.0.7"
thiserror = "1.0.56"
tracing = "0.1"
tracing-tracy = { version = "0.10.4", optional = true }
windows-version = "0.1.0"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Performance",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading"
]

[dev-dependencies]
tracing-subscriber = "0.3"
