[package]
name = "plinth"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
arrayvec = "0.7.4"
bitflags = "2.4.2"
const-fnv1a-hash = "1.1"
thiserror = "1"
windows-version = "0.1.0"

[dependencies.windows]
version = "0.53"
features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Performance",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading"
]
