[package]
name = "plinth"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
allocator-api2 = "0.2.18"
arrayvec = "0.7"
bitfield-struct = "0.6"
bitflags = "2.5"
const-fnv1a-hash = "1.1"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
smallvec = { version = "1.13", features = ["const_generics", "const_new"] }
thiserror = "1"
windows-core = "0.56"
windows-version = "0.1"

[dependencies.windows]
version = "0.56"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Performance",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading"
]
