[package]
name = "image_decode"
version = "0.1.0"
edition = "2021"

[features]
default = ["png", "qoi"]

png = ["builtin-decoder"]
qoi = ["builtin-decoder"]

# Set this to make DecoderImpl and CustomDecoderFactory available.
custom-decoder = []

# Set automatically by pre-defined image formats.
builtin-decoder = []

[dependencies]
